deploy/k8s/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pdf-optimizer
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: progeek.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pdf-optimizer
                port:
                  number: 80
  tls:
    - hosts:
        - pdf.progeek.de
      secretName: pdf.progeek.de-tls
